--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,11 @@
---- #YAML:1.0
-name:               Text-Histogram
-version:            0.01
-abstract:           The great new Text::Histogram!
-author:
-    - Marco Neves <neves@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
-build_requires:
-    ExtUtils::MakeMaker:  0
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Text-Histogram
+version:      0.001
+version_from: lib/Text/Histogram.pm
+installdirs:  site
 requires:
-    Test::More:  0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
-meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+    Test::More:                    0
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.30
